--- a/src/app/components/main/topbar/connection/qr-scan/qr-scan.component.html
+++ b/src/app/components/main/topbar/connection/qr-scan/qr-scan.component.html
@@ -27,7 +27,7 @@
       <p>
         {{ 'webConnect.browser.description' | translate  }}
       </p>
-      <ol>
+      <ol class="no-list-ui">
         <li>{{ 'webConnect.browser.step1' | translate  }}</li>
         <li>{{ 'webConnect.browser.step2' | translate  }}</li>
       </ol>
