--- a/src/app/components/main/topbar/menu/menu.component.html
+++ b/src/app/components/main/topbar/menu/menu.component.html
@@ -1,6 +1,6 @@
-<div class="menu-topbar" [routerLink]="'/home'">
-  <img src="assets/logo.svg" alt="logo">
-  <span>WoWs Monitor</span>
+<div class="menu-topbar p-pt-2 p-pb-2 p-pl-3 p-pr-3 p-d-flex p-ai-center" [routerLink]="'/home'">
+  <img src="assets/logo.svg" alt="logo" class="p-mr-4">
+  <span style="font-size: 1.2rem">WoWs Monitor</span>
 </div>
 
 <div class="menu-wrapper">
