--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,7 +16,7 @@ $textColor:#dedede;
 $textSecondaryColor:#888888;
 $borderRadius:3px;
 $transitionDuration:.2s;
-$primeIconFontSize:1.25em;
+$primeIconFontSize:1.25rem;
 
 $successColor:#34A835;
 $warningColor:#ffba01;
