--- a/src/app/components/main/topbar/connection/connection.component.html
+++ b/src/app/components/main/topbar/connection/connection.component.html
@@ -1,4 +1,4 @@
-<div class="iconWrapper" (click)="openQrDialog($event)" [pTooltip]="'webConnect.desktop.title' | translate"
+<div class="iconWrapper p-ml-2" (click)="openQrDialog($event)" [pTooltip]="'webConnect.desktop.title' | translate"
 tooltipPosition="bottom">
   <fa-icon [icon]="qrIcon" size="2x" [fixedWidth]="true"></fa-icon>
 </div>
@@ -15,12 +15,12 @@ tooltipPosition="bottom">
     </p>
   </ng-container>
 </p-overlayPanel>
-<div class="iconWrapper state-{{signalrService.$socketStatus | async}}" [pTooltip]="(statusText | async) | translate"
+<div class="iconWrapper p-ml-2 state-{{signalrService.$socketStatus | async}}" [pTooltip]="(statusText | async) | translate"
   tooltipPosition="bottom">
   <fa-icon [icon]="connectionIcon" size="2x" [fixedWidth]="true"></fa-icon>
 </div>
 
-<div class="iconWrapper" *ngIf="(signalrService.$socketStatus | async) == 0 || (signalrService.$socketStatus | async) == 4">
+<div class="iconWrapper p-ml-2" *ngIf="(signalrService.$socketStatus | async) == 0 || (signalrService.$socketStatus | async) == 4">
   <p-button *ngIf="!(showOnTablet | async)" (click)="reconnect()" icon="pi pi-replay"
     [label]="'service.reconnect' | translate" styleClass="p-button-success"></p-button>
   <p-button *ngIf="showOnTablet | async" (click)="reconnect()" icon="pi pi-replay" styleClass="p-button-success">
