--- a/src/app/components/main/topbar/path-picker/path-picker-dialog/path-picker-dialog.component.html
+++ b/src/app/components/main/topbar/path-picker/path-picker-dialog/path-picker-dialog.component.html
@@ -1,6 +1,6 @@
-<p [innerHTML]="'pathPicker.description' | translate | sanitizeHtml"></p>
+<p class="p-mb-2" [innerHTML]="'pathPicker.description' | translate | sanitizeHtml"></p>
 
-<div class="input-wrap p-fluid space-bottom">
+<div class="input-wrap p-fluid p-mb-4">
   <div class="p-inputgroup">
     <input pInputText [title]="settingsService.form.mainClient.model" type="text" pInputText [disabled]="true"
            [value]="settingsService.form.mainClient.model">
@@ -9,19 +9,25 @@
 </div>
 <ng-container *ngIf="paths.length > 0">
   <h3>{{ 'pathPicker.multiClientSelect' | translate  }}</h3>
-  <div class="input-wrap p-fluid space-bottom">
+  <div class="input-wrap p-fluid p-mb-4">
     <p-dropdown [options]="options" [formControl]="settingsService.form.selectedDirectory" appendTo="body"></p-dropdown>
   </div>
 </ng-container>
-<ng-container *ngIf="directoryService.$status | async;let info">
-  <h3>{{'pathPicker.additionalInfo' | translate}}</h3>
-  <pre>
-Region:               {{info.region | region}}
-Client version:       {{info.clientVersion}}
-Folder version:       {{info.folderVersion}}
-Replays pathbase:     {{info.replaysPathBase}}
-Preferences pathbase: {{info.preferencesPathBase}}
-Replays folder found: {{info.replaysFoldersFound}}
-Replays paths:        {{info.replaysFolders | join:',\n'}}
-      </pre>
+<ng-container *ngIf="additionalInformation | async;let info">
+  <h3>{{'pathPicker.additionalInfo.title' | translate}}</h3>
+  <table>
+    <tbody>
+
+    </tbody>
+  </table>
+  <p-table [value]="info" styleClass="p-datatable-sm">
+    <ng-template pTemplate="header">
+    </ng-template>
+    <ng-template pTemplate="body" let-item>
+      <tr>
+        <td style="width: 35%">{{item.label | async}}</td>
+        <td>{{item.value}}</td>
+      </tr>
+    </ng-template>
+  </p-table>
 </ng-container>
