--- a/src/styles/changelogs.scss
+++ b/src/styles/changelogs.scss
@@ -3,7 +3,7 @@
 .changelog-container {
 
   display: grid;
-  gap: 1em;
+  gap: 1rem;
   grid-template-areas: 'list'
     'detail';
   grid-template-columns: auto;
@@ -15,13 +15,10 @@
 
     ul.changelog-list {
       list-style: none;
-      margin: 0 -1em;
-      margin-bottom: 1em;
-      padding: 0;
+      margin: 0 -1rem;
 
       li {
-        margin: 0;
-        padding: .5em 1em;
+        padding: .5em 1rem;
         border-bottom: 1px solid $secondaryColor;
         cursor: pointer;
         transition: all .3s ease-in-out;
