--- a/src/app/components/main/monitor/monitor.component.html
+++ b/src/app/components/main/monitor/monitor.component.html
@@ -1,17 +1,21 @@
 <div class="floating-buttons">
 
-  <a routerLink="/settings/appearance" class="round-icon-button">
-    <fa-icon [icon]="faPaintBrush" [fixedWidth]="true"></fa-icon>
-  </a>
+  <button class="p-button-rounded p-button-xl p-button p-component p-button-icon-only" routerLink="/settings/appearance">
+    <span class="p-button-icon">
+      <fa-icon [icon]="faPaintBrush" [fixedWidth]="true"></fa-icon>
+    </span>
+    <span aria-hidden="true" class="p-button-label">&nbsp;</span>
+  </button>
 </div>
 
-<div class="container {{$fontSizeClass | async}}" *ngIf="signalrService.$info | async;let matchInfo" #container (click)="$event.preventDefault();$event.stopPropagation()">
+<div class="container {{$fontSizeClass | async}}" *ngIf="signalrService.$info | async;let matchInfo" #container
+     (click)="$event.preventDefault();$event.stopPropagation()">
   <p-card id="monitor-friendly-clan" class="no-padding">
     <app-team [clan]="matchInfo.friendlyClan" [team]="matchInfo.friendlyTeam" [cw]="matchInfo.matchGroup == 'CLAN'">
     </app-team>
   </p-card>
   <p-card id="monitor-enemy-clan" class="no-padding"
-    *ngIf="matchInfo.matchGroup != 'COOPERATIVE' && matchInfo.matchGroup != 'PVE'">
+          *ngIf="matchInfo.matchGroup != 'COOPERATIVE' && matchInfo.matchGroup != 'PVE'">
     <app-team [clan]="matchInfo.enemyClan" [team]="matchInfo.enemyTeam" [cw]="matchInfo.matchGroup == 'CLAN'">
     </app-team>
   </p-card>
@@ -19,14 +23,14 @@
     <ng-container *ngFor="let player of matchInfo.friendly; let l = last; let f = first;">
       <app-player [player]="player" [cw]="matchInfo.matchGroup == 'CLAN'" class="player-card" [last]="l" [first]="f">
       </app-player>
-      <hr class="player-seperator" *ngIf="!l" />
+      <hr class="player-seperator" *ngIf="!l"/>
     </ng-container>
   </p-card>
   <p-card id="monitor-enemy" class="no-padding" [class.high-contrast-mode]="settingsService.form.monitorConfig.highContrastMode.model">
     <ng-container *ngFor="let player of matchInfo.enemy; let l = last; let f = first;">
       <app-player [player]="player" [cw]="matchInfo.matchGroup == 'CLAN'" class="player-card" [last]="l" [first]="f">
       </app-player>
-      <hr class="player-seperator" *ngIf="!l" />
+      <hr class="player-seperator" *ngIf="!l"/>
     </ng-container>
   </p-card>
 
@@ -34,7 +38,6 @@
                  [model]="items">
   </p-contextMenu>
 </div>
-
 
 
 <div *ngIf="!(signalrService.$info | async)" class="p-d-flex p-flex-grow p-ai-center p-jc-center">
