--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -92,8 +92,8 @@ input[readonly].file-input {
 }
 
 .p-button-rounded.p-button-xl {
-  padding: 0.750rem 1.5rem;
-  height: 3.143rem;
+  padding: 0.750rem 1.5rem!important;;
+  height: 3.143rem!important;
 
   span {
     font-size: 1.5rem;
